--- a/Staging-Refresh-dashboard.html
+++ b/Staging-Refresh-dashboard.html
@@ -422,8 +422,8 @@
                 preparation: [
                     { name: 'Create MariaDB disks from latest snapshots', status: 'In Progress', notes: ''},
                     { name: 'Create Firestore extracts for relevant collections', status: 'In Progress', notes: ''},
-                    { name: 'Developers to confirm snapshot costs', status: 'Skipped', notes: ''},
-                    { name: 'No MongoDB prep work necessary', status: 'Skipped', notes: ''},
+                    { name: 'Review Snapshot costs', status: 'Completed', notes: 'Deirdre contacted'},
+                    { name: 'MongoDB prep work', status: 'Skipped', notes: 'Not Necessary'},
                     { name: 'Richard Bywater to run baseline performance tests', status: 'Completed', notes: ''},
                     { name: 'Richard Bywater activate test properties in Live', status: 'Pending', notes: ''},
                 ],
