--- a/Staging-Refresh-dashboard.html
+++ b/Staging-Refresh-dashboard.html
@@ -420,12 +420,12 @@
             },
             roadmap: {
                 preparation: [
-                    { name: 'Create MariaDB disks from latest snapshots', status: 'In Progress', notes: ''},
-                    { name: 'Create Firestore extracts for relevant collections', status: 'In Progress', notes: ''},
+                    { name: 'Create MariaDB disks from latest snapshots', status: 'Completed', notes: ''},
+                    { name: 'Create Firestore extracts for relevant collections', status: 'Completed', notes: ''},
                     { name: 'Review Snapshot costs', status: 'Completed', notes: 'Deirdre contacted'},
-                    { name: 'MongoDB prep work', status: 'Skipped', notes: 'Not Necessary'},
+                    { name: 'MongoDB prep work', status: 'Completed', notes: 'Not Necessary'},
                     { name: 'Richard Bywater to run baseline performance tests', status: 'Completed', notes: ''},
-                    { name: 'Richard Bywater activate test properties in Live', status: 'Pending', notes: ''},
+                    { name: 'Richard Bywater activate test properties in Live', status: 'Completed', notes: ''},
                 ],
                 refreshDay: [
                     { name: 'CODE FREEZE', details: 'No deployments to staging.', status: 'Pending', notes: 'Starting at 9am'},
